--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>MEDA: Multivariate Exploratory Data Analysis with jamovi and FactoMineR</title>
+<title>SEDA: Sensory Evaluation Data Analysis with jamovi and FactoMineR</title>
 
 <script src="site_libs/header-attrs-2.21/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -293,39 +293,35 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">MEDA: Multivariate Exploratory Data
-Analysis with jamovi and FactoMineR</h1>
+<h1 class="title toc-ignore">SEDA: Sensory Evaluation Data Analysis with
+jamovi and FactoMineR</h1>
 
 </div>
 
 
-<p>MEDA is jamovi module for multivariate exploratory data analysis
-methods such as Principal Components Analysis, Correspondence Analysis,
-Multiple Correspondence Analysis. Alongside those main methods, three
-other methods have been added to the modules: the description of a
-categorical or a continuous variable by categorical and continuous
-variables, the description of a categorical variable with a textual
-variable and finally, the description of a contingency table.</p>
-<p>This tutorial was mostly written by Maxime Saland.</p>
-<!-- For more information about simple R Markdown websites, please read the documentation at https://bookdown.org/yihui/rmarkdown/rmarkdown-site.html. -->
-<!-- Please also note that simple R Markdown sites are _not_ based on **blogdown**. They are probably good for websites with only a few Rmd documents. For larger-scale and more sophisticated websites (such as blogs), you may want to use **blogdown** instead: https://github.com/rstudio/blogdown. -->
-<p><img src="images/MenuMEDA.png" width="80%" style="display: block; margin: auto auto auto 0;" />
+<p>SEDA is jamovi module for sensory evaluation data analysis methods
+with two types of perception data : the first one describes stimuli
+according to a fixed list of attributes (QDA data, for instance) such as
+the characterization of the stimulus space, its representation or the
+identification of the defects, the second one describes stimuli freely
+by napping or sorting data.</p>
+<p><img src="images/MenuSEDA.png" width="80%" style="display: block; margin: auto auto auto 0;" />
 <br><br /></p>
 <p>Links to the user guide for each of those methods are available
-below. <br><br /> For the <strong>Automatic Univariate
-Description</strong> methods:</p>
+below. <br><br /> For the <strong>Fixed List of Attributes</strong>
+methods:</p>
 <ul>
-<li><a href="catdes.html">Description of a categorical or continuous
-variable</a></li>
-<li><a href="descfreq.html">Description of a categorical variable by a
-textual variable</a></li>
-<li><a href="textual.html">Description of a contingency table</a></li>
+<li><a href="charstim.html">Characterization of the Stimulus
+Space</a></li>
+<li><a href="repstim.html">Representation of the Stimulus
+Space</a><br />
+</li>
+<li><a href="idef.html">Identification of the defects</a></li>
 </ul>
-<p>For the <strong>Multivariate Analysis</strong> methods:</p>
+<p>For the <strong>Free Perception</strong> methods:</p>
 <ul>
-<li><a href="PCA.html">Principal Component Analysis</a></li>
-<li><a href="CA.html">Correspondence Analysis</a></li>
-<li><a href="MCA.html">Multiple Correspondence Analysis</a></li>
+<li><a href="AND.html">Analysis of Napping Data</a></li>
+<li><a href="ASD.html">Analysis of Sorting Data</a></li>
 </ul>
 
 
