--- a/charstim.html
+++ b/charstim.html
@@ -314,7 +314,7 @@ div.tocify {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">MEDA</a>
+      <a class="navbar-brand" href="index.html">SEDA</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -323,37 +323,34 @@ div.tocify {
 </li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-    Automatic Univariate Description
+    Fixed List of Attributes
      
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="catdes.html">By Categorical/Quantitative Data</a>
+      <a href="charstim.html">Characterization of the Stimulus Space</a>
     </li>
     <li>
-      <a href="textual.html">By Textual Data</a>
+      <a href="textual.html">Representation of the Stimulus Space</a>
     </li>
     <li>
-      <a href="descfreq.html">By Columns/Rows (Contingency Table)</a>
+      <a href="descfreq.html">Identification of the defects</a>
     </li>
   </ul>
 </li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-    Multivariate Analysis
+    Free Perception
      
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="PCA.html">Principal Component Analysis</a>
+      <a href="PCA.html">Analysis of Napping Data</a>
     </li>
     <li>
-      <a href="CA.html">Correspondence Analysis</a>
-    </li>
-    <li>
-      <a href="MCA.html">Multiple Correspondence Analysis</a>
+      <a href="CA.html">Analysis of Sorting Data</a>
     </li>
   </ul>
 </li>
@@ -377,9 +374,8 @@ according to a fixed list of attributes</h1>
 
 <p>The first method of the <strong>Fixed List of Attributes</strong>
 submenu is the characterization of the stimulus space according to a
-fixed list of attributes.
-<img src="../sedasite/images/charstim1.png" width="80%" style="display: block; margin: auto auto auto 0;" />
-<br><br /></p>
+fixed list of attributes.</p>
+<p><br><br /></p>
 <div id="the-interface" class="section level2">
 <h2><strong>The interface</strong></h2>
 <p>As it can be seen in the figure above, the interface is very simple
