--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">MEDA</a>
+      <a class="navbar-brand" href="index.html">SEDA</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -247,37 +247,34 @@ $(document).ready(function () {
 </li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-    Automatic Univariate Description
+    Fixed List of Attributes
      
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="catdes.html">By Categorical/Quantitative Data</a>
+      <a href="charstim.html">Characterization of the Stimulus Space</a>
     </li>
     <li>
-      <a href="textual.html">By Textual Data</a>
+      <a href="textual.html">Representation of the Stimulus Space</a>
     </li>
     <li>
-      <a href="descfreq.html">By Columns/Rows (Contingency Table)</a>
+      <a href="descfreq.html">Identification of the defects</a>
     </li>
   </ul>
 </li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-    Multivariate Analysis
+    Free Perception
      
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="PCA.html">Principal Component Analysis</a>
+      <a href="PCA.html">Analysis of Napping Data</a>
     </li>
     <li>
-      <a href="CA.html">Correspondence Analysis</a>
-    </li>
-    <li>
-      <a href="MCA.html">Multiple Correspondence Analysis</a>
+      <a href="CA.html">Analysis of Sorting Data</a>
     </li>
   </ul>
 </li>
