--- a/idef.html
+++ b/idef.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Characterization of the Stimulus Space according to a fixed list of attributes</title>
+<title>Identification of the defects</title>
 
 <script src="site_libs/header-attrs-2.21/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -366,23 +366,24 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Characterization of the Stimulus Space
-according to a fixed list of attributes</h1>
+<h1 class="title toc-ignore">Identification of the defects</h1>
 
 </div>
 
 
-<p>The first method of the <strong>Fixed List of Attributes</strong>
-submenu is the characterization of the stimulus space according to a
-fixed list of attributes.</p>
+<p>The last method of the <strong>Fixed List of Attributes</strong>
+submenu is used to identificate the defects.</p>
 <p><br><br /></p>
 <div id="the-interface" class="section level2">
 <h2><strong>The interface</strong></h2>
-<p>As it can be seen in the figure above, the interface is very simple
-and only has 4 fields you need to worry about. <br><br />
-<img src="images/charstim2.png" width="90%" style="display: block; margin: auto auto auto 0;" /></p>
-<p>Firstly, you put the variable <strong><em>Stimulus
-Effect</em></strong> , a variable that… <br><br /></p>
+<p><br><br /></p>
+</div>
+<div id="potential-issues" class="section level2">
+<h2><strong>Potential issue(s)</strong></h2>
+</div>
+<div id="example" class="section level2">
+<h2><strong>Example</strong></h2>
+<p>The data used to demonstrate this analysis is the… <br><br /></p>
 </div>
 
 
