--- a/index.html
+++ b/index.html
@@ -256,10 +256,10 @@ $(document).ready(function () {
       <a href="charstim.html">Characterization of the Stimulus Space</a>
     </li>
     <li>
-      <a href="textual.html">Representation of the Stimulus Space</a>
+      <a href="repstim.html">Representation of the Stimulus Space</a>
     </li>
     <li>
-      <a href="descfreq.html">Identification of the defects</a>
+      <a href="idef.html">Identification of the defects</a>
     </li>
   </ul>
 </li>
@@ -271,10 +271,10 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="PCA.html">Analysis of Napping Data</a>
+      <a href="AND.html">Analysis of Napping Data</a>
     </li>
     <li>
-      <a href="CA.html">Analysis of Sorting Data</a>
+      <a href="ASD.html">Analysis of Sorting Data</a>
     </li>
   </ul>
 </li>
