--- a/charstim.html
+++ b/charstim.html
@@ -384,6 +384,16 @@ and only has 4 fields you need to worry about. <br><br />
 <p>Firstly, you put the variable <strong><em>Stimulus
 Effect</em></strong> , a variable that… <br><br /></p>
 </div>
+<div id="potential-issues" class="section level2">
+<h2><strong>Potential issue(s)</strong></h2>
+<p>For the analysis to run smoothly, make sure that… <br><br /></p>
+</div>
+<div id="example" class="section level2">
+<h2><strong>Example</strong></h2>
+<p>For this example, we will be using gain the chocolate data set
+(available with SEDA).</p>
+<p><br><br /></p>
+</div>
 
 
 
