--- a/repstim.html
+++ b/repstim.html
@@ -394,8 +394,8 @@ list of attributes.</p>
 </div>
 <div id="example" class="section level2">
 <h2><strong>Example</strong></h2>
-<p>For this example, we will be using gain the chocolate data set
-(available with SEDA).</p>
+<p>For this example, we will be using again the chocolate data set
+“sensochoc” (available with SEDA).</p>
 <p><img src="images/charstim5.png" width="90%" style="display: block; margin: auto auto auto 0;" />
 <br><br /></p>
 <p><img src="images/repstim7.png" width="95%" style="display: block; margin: auto auto auto 0;" />
