--- a/charstim.html
+++ b/charstim.html
@@ -382,20 +382,34 @@ fixed list of attributes.</p>
 and only has 4 fields you need to worry about. <br><br />
 <img src="images/charstim2.png" width="85%" style="display: block; margin: auto auto auto 0;" /></p>
 <p>Firstly, you put the variable <strong><em>Stimulus
-Effect</em></strong> , a variable that… <br><br /></p>
-</div>
-<div id="potential-issues" class="section level2">
-<h2><strong>Potential issue(s)</strong></h2>
-<p>For the analysis to run smoothly, make sure that… <br><br /></p>
+Effect</em></strong> , a categorical variable that refers to the product
+that you want to study. Then, you put the <strong><em>Subject
+Effect</em></strong>, the main subject that evaluates the product. The
+<strong><em>Sensory Attributes</em></strong> are the fixed attributes of
+your choice that helps in the description of the stimulus. Lastly, the
+<strong><em>Significiance threshold</em></strong> option set the
+threshold under which the sensory attributes describes significantly the
+stimulus. <br><br /></p>
 </div>
 <div id="example" class="section level2">
 <h2><strong>Example</strong></h2>
-<p>For this example, we will be using gain the chocolate data set
+<p>For this example, we will be using the chocolate data set “sensochoc”
 (available with SEDA).</p>
-<p><img src="images/charstim5.png" width="90%" style="display: block; margin: auto auto auto 0;" /></p>
-<p><img src="images/charstim3.png" width="60%" style="display: block; margin: auto auto auto 0;" />
+<p><img src="images/charstim5.png" width="90%" style="display: block; margin: auto auto auto 0;" />
 <br><br /></p>
-<p><img src="images/charstim4.png" width="70%" style="display: block; margin: auto auto auto 0;" />
+<p><img src="images/charstim3.png" width="80%" style="display: block; margin: auto auto auto 0;" />
+<br><br /></p>
+<p><img src="images/charstim4.png" width="50%" style="display: block; margin: auto auto auto 0;" /></p>
+<p>This output highlights the sensory attributes for which products are
+differentiated at a significance threshold of
+<strong><em>0.05</em></strong>. This list of attributes is sorted from
+the most significant to the less (but still) significant. We see that
+products have been extremely differentiated by the panelists: it seems
+that some attributes, such as <strong><em>Bitterness</em></strong> or
+<strong><em>Caramel</em></strong>, are really specific to some products
+(according to the value of the <strong><em>“Vtest”</em></strong>).
+<br><br /></p>
+<p><img src="images/charstim6.png" width="90%" style="display: block; margin: auto auto auto 0;" />
 <br><br /></p>
 </div>
 
