--- a/index.html
+++ b/index.html
@@ -259,6 +259,9 @@ $(document).ready(function () {
       <a href="repstim.html">Representation of the Stimulus Space</a>
     </li>
     <li>
+      <a href="idecat.html">Identification of CATA</a>
+    </li>
+    <li>
       <a href="idef.html">Identification of the defects</a>
     </li>
   </ul>
@@ -275,6 +278,18 @@ $(document).ready(function () {
     </li>
     <li>
       <a href="ASD.html">Analysis of Sorting Data</a>
+    </li>
+  </ul>
+</li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Hedonic Data
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="prefmap.html">Preference Mapping</a>
     </li>
   </ul>
 </li>
@@ -301,7 +316,8 @@ with two types of perception data : the first one describes stimuli
 according to a fixed list of attributes (QDA data, for instance) such as
 the characterization of the stimulus space, its representation or the
 identification of the defects, the second one describes stimuli freely
-by napping or sorting data.</p>
+by napping or sorting data.There is also a submenu for Hedonic data,
+with Preference Mapping.</p>
 <p><img src="images/MenuSEDA.png" width="80%" style="display: block; margin: auto auto auto 0;" />
 <br><br /></p>
 <p>Links to the user guide for each of those methods are available
@@ -310,15 +326,18 @@ methods:</p>
 <ul>
 <li><a href="charstim.html">Characterization of the Stimulus
 Space</a></li>
-<li><a href="repstim.html">Representation of the Stimulus
-Space</a><br />
-</li>
+<li><a href="repstim.html">Representation of the Stimulus Space</a></li>
+<li><a href="idecat.html">Identification of CATA</a></li>
 <li><a href="idef.html">Identification of the defects</a></li>
 </ul>
 <p>For the <strong>Free Perception</strong> methods:</p>
 <ul>
 <li><a href="AND.html">Analysis of Napping Data</a></li>
 <li><a href="ASD.html">Analysis of Sorting Data</a></li>
+</ul>
+<p>For <strong>Hedonic Data</strong>:</p>
+<ul>
+<li><a href="prefmap.html">Preference Mapping</a></li>
 </ul>
 
 
