--- a/repstim.html
+++ b/repstim.html
@@ -335,6 +335,9 @@ div.tocify {
       <a href="repstim.html">Representation of the Stimulus Space</a>
     </li>
     <li>
+      <a href="idecat.html">Identification of CATA</a>
+    </li>
+    <li>
       <a href="idef.html">Identification of the defects</a>
     </li>
   </ul>
@@ -351,6 +354,18 @@ div.tocify {
     </li>
     <li>
       <a href="ASD.html">Analysis of Sorting Data</a>
+    </li>
+  </ul>
+</li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Hedonic Data
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="prefmap.html">Preference Mapping</a>
     </li>
   </ul>
 </li>
@@ -377,20 +392,57 @@ list of attributes.</p>
 <p><br><br /></p>
 <div id="the-interface" class="section level2">
 <h2><strong>The interface</strong></h2>
-<p><img src="images/repstim2.png" width="80%" style="display: block; margin: auto auto auto 0;" />
-<br><br /></p>
-<p><img src="images/repstim3.png" width="80%" style="display: block; margin: auto auto auto 0;" />
-<br><br /></p>
-<p><img src="images/repstim4.png" width="80%" style="display: block; margin: auto auto auto 0;" />
-<br><br /></p>
-<p><img src="images/repstim5.png" width="80%" style="display: block; margin: auto auto auto 0;" />
-<br><br /></p>
-<p><img src="images/repstim6.png" width="80%" style="display: block; margin: auto auto auto 0;" />
+<p>This interface has a richer structure than the first submenu.It might
+feels intimidating at first, but we will see how it works step by
+step.</p>
+<div id="variable-selection" class="section level3">
+<h3>Variable selection</h3>
+<p><img src="images/repstim2.png" width="65%" style="display: block; margin: auto auto auto 0;" />
+The first part is about selecting the variables for your analysis and
+giving them a role. As you can see on the figure above, there are 3
+different types of variable for the representation (same as the first
+page of the submenu). The description of the attributes is available on
+the page <strong><em>Characterization of the stimulus space according to
+a fixed list of attributes</em></strong>. <br><br /></p>
+</div>
+<div id="options-on-the-sensory-attributes" class="section level3">
+<h3>Options on the Sensory Attributes</h3>
+<p><img src="images/repstim3.png" width="65%" style="display: block; margin: auto auto auto 0;" /></p>
+<p>There are two filters concerning the <strong><em>Sensory
+Attributes</em></strong> : - An option called <strong><em>Scale to unit
+variance</em></strong>. This option purpose is to normalize the Sensory
+Attributes used in the representation. Since most of the time the
+representation of stimuli are performed on normalized data, this option
+is checked by default. - An option <strong><em>Selection of the Sensory
+Attributes</em></strong> that aims in choosing the
+<strong><em>p-value</em></strong> of the Stimulus Effect.</p>
+</div>
+<div id="graphic-options" class="section level3">
+<h3>Graphic options</h3>
+<p><img src="images/repstim4.png" width="65%" style="display: block; margin: auto auto auto 0;" /></p>
+<p>Let’s move on to the next set of options: the Graphic options. As the
+name suggests, those options rule what will be plotted on the graphics
+in the results window. With those options, you can choose which
+components to plot on the x-axis and the y-axis. For the additionnal
+plots, you have two possibilities: you can decide to add a plot that
+represents stimuli according to the panels of each product (separated
+with different colors), which shows the variability of stimuli, or you
+can choose an additionnal plot that does the same but with sensory
+attributes. <br><br /></p>
+</div>
+<div id="resampling-options" class="section level3">
+<h3>Resampling Options</h3>
+<p><img src="images/repstim5.png" width="65%" style="display: block; margin: auto auto auto 0;" /></p>
+<p>With the <strong><em>Resampling Options</em></strong>, you can choose
+the number of subjects and panels of your choice. Same method for the
+<strong><em>Significiance threshold</em></strong> option. You can also
+center or scale by subject. <br><br /></p>
+</div>
+<div id="numerical-indicators" class="section level3">
+<h3>Numerical Indicators</h3>
+<p><img src="images/repstim6.png" width="65%" style="display: block; margin: auto auto auto 0;" />
 <br><br /></p>
 </div>
-<div id="potential-issues" class="section level2">
-<h2><strong>Potential issue(s)</strong></h2>
-<p>For the analysis to run smoothly, make sure that… <br><br /></p>
 </div>
 <div id="example" class="section level2">
 <h2><strong>Example</strong></h2>
@@ -398,17 +450,19 @@ list of attributes.</p>
 “sensochoc” (available with SEDA).</p>
 <p><img src="images/charstim5.png" width="90%" style="display: block; margin: auto auto auto 0;" />
 <br><br /></p>
-<p><img src="images/repstim7.png" width="95%" style="display: block; margin: auto auto auto 0;" />
+<p><img src="images/repstim7.png" width="65%" style="display: block; margin: auto auto auto 0;" />
 <br><br /></p>
-<p><img src="images/repstim8.png" width="80%" style="display: block; margin: auto auto auto 0;" />
+<p><img src="images/repstim8.png" width="95%" style="display: block; margin: auto auto auto 0;" />
 <br><br /></p>
 <p><img src="images/repstim9.png" width="70%" style="display: block; margin: auto auto auto 0;" />
 <br><br /></p>
-<p><img src="images/repstim10.png" width="50%" style="display: block; margin: auto auto auto 0;" />
+<p><img src="images/repstim10.png" width="60%" style="display: block; margin: auto auto auto 0;" />
 <br><br /></p>
-<p><img src="images/repstim11.png" width="95%" style="display: block; margin: auto auto auto 0;" />
+<p><img src="images/repstim11.png" width="40%" style="display: block; margin: auto auto auto 0;" />
 <br><br /></p>
 <p><img src="images/repstim12.png" width="95%" style="display: block; margin: auto auto auto 0;" />
+<br><br /></p>
+<p><img src="images/repstim13.png" width="80%" style="display: block; margin: auto auto auto 0;" />
 <br><br /></p>
 </div>
 
