--- a/repstim.html
+++ b/repstim.html
@@ -440,9 +440,19 @@ center or scale by subject. <br><br /></p>
 </div>
 <div id="numerical-indicators" class="section level3">
 <h3>Numerical Indicators</h3>
-<p><img src="images/repstim6.png" width="65%" style="display: block; margin: auto auto auto 0;" />
-<br><br /></p>
+<p><img src="images/repstim6.png" width="65%" style="display: block; margin: auto auto auto 0;" /></p>
+<p>Lastly, we have the options for the numerical indicators. The
+Significance threshold option from the Automatic Description of the Axes
+section fixes the threshold beneath which a variable characterize a
+dimension. The option Number of factors affect both the number of
+dimensions to be described and the number of dimensions shown for the
+tables. <br><br /></p>
 </div>
+</div>
+<div id="potential-issues" class="section level2">
+<h2><strong>Potential issue(s)</strong></h2>
+<p>Concerning the <strong><em>Resampling Options</em></strong>, the
+number of subjects/ panels must not</p>
 </div>
 <div id="example" class="section level2">
 <h2><strong>Example</strong></h2>
