--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>SEDA: Sensory Evaluation Data Analysis with jamovi and FactoMineR</title>
+<title>SEDA: Sensory Data Analysis with jamovi and SensoMineR</title>
 
 <script src="site_libs/header-attrs-2.21/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -32,6 +32,8 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
+<link href="site_libs/pagedtable-1.1/css/pagedtable.css" rel="stylesheet" />
+<script src="site_libs/pagedtable-1.1/js/pagedtable.js"></script>
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -262,7 +264,7 @@ $(document).ready(function () {
       <a href="idecat.html">Identification of CATA</a>
     </li>
     <li>
-      <a href="idef.html">Identification of the defects</a>
+      <a href="idef.html">Identification of the Defects</a>
     </li>
   </ul>
 </li>
@@ -305,37 +307,36 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">SEDA: Sensory Evaluation Data Analysis with
-jamovi and FactoMineR</h1>
+<h1 class="title toc-ignore">SEDA: Sensory Data Analysis with jamovi and
+SensoMineR</h1>
 
 </div>
 
 
-<p>SEDA is jamovi module for sensory evaluation data analysis methods
-with two types of perception data : the first one describes stimuli
-according to a fixed list of attributes (QDA data, for instance) such as
-the characterization of the stimulus space, its representation or the
-identification of the defects, the second one describes stimuli freely
-by napping or sorting data.There is also a submenu for Hedonic data,
-with Preference Mapping.</p>
+<p>SEDA is jamovi module for analyzing sensory data. Three main types of
+data can be analyzed: data obtained when stimuli are described according
+to a fixed list of attributes (QDA data, for instance), data obtained
+when stimuli are described “freely” (sorting data, for instance), and
+finally, hedonic data (external preference mapping).</p>
 <p><img src="images/MenuSEDA.png" width="80%" style="display: block; margin: auto auto auto 0;" />
 <br><br /></p>
-<p>Links to the user guide for each of those methods are available
-below. <br><br /> For the <strong>Fixed List of Attributes</strong>
-methods:</p>
+<p>The following is a list of the methods that are implemented in the
+SEDA module.</p>
+<p>When stimuli are described according to a <strong>fixed list of
+attributes</strong>:</p>
 <ul>
 <li><a href="charstim.html">Characterization of the Stimulus
 Space</a></li>
 <li><a href="repstim.html">Representation of the Stimulus Space</a></li>
 <li><a href="idecat.html">Identification of CATA</a></li>
-<li><a href="idef.html">Identification of the defects</a></li>
+<li><a href="idef.html">Identification of the Defects</a></li>
 </ul>
-<p>For the <strong>Free Perception</strong> methods:</p>
+<p>When stimuli are described <strong>freely</strong>:</p>
 <ul>
 <li><a href="AND.html">Analysis of Napping Data</a></li>
 <li><a href="ASD.html">Analysis of Sorting Data</a></li>
 </ul>
-<p>For <strong>Hedonic Data</strong>:</p>
+<p>When dealing with <strong>dedonic data</strong>:</p>
 <ul>
 <li><a href="prefmap.html">Preference Mapping</a></li>
 </ul>
